[project]
name = "adafruit-blesniffer-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nobuyasu Tomura", email = "ntomura92@gmail.com" }
]
dependencies = [
    "pyserial>=3.4",
    "six>=1.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adafruit_blesniffer_python"]
